nice looking articles list

--- a/app/templates/components/post-list-item.hbs
+++ b/app/templates/components/post-list-item.hbs
@@ -24,6 +24,6 @@
     </h3>
     <span class="attribution">Fandom</span>
     <p class="excerpt">
-        {{link-to model.excerpt 'post' model rel='bookmark'}}
+        {{link-to excerptFormatted 'post' model rel='bookmark'}}
     </p>
 </div>
