--- a/app/templates/post.hbs
+++ b/app/templates/post.hbs
@@ -1,3 +1,7 @@
-<h2>{{link-to 'Articles' 'posts'}}</h2>
-
-{{post-article model=model}}
+<div class="article-wrapper">
+    <div class="grid-container">
+        <div class="article-container grid-block">
+            {{post-article model=model}}
+        </div>
+    </div>
+</div>
