--- a/app/templates/post.hbs
+++ b/app/templates/post.hbs
@@ -2,6 +2,7 @@
     <div class="grid-container">
         <div class="article-container grid-block">
             {{post-article model=model}}
+            {{post-right-rail}}
         </div>
     </div>
 </div>
