featured post header

--- a/app/templates/post.hbs
+++ b/app/templates/post.hbs
@@ -1,3 +1,4 @@
+{{post-featured-header model=model}}
 <div class="article-wrapper">
     <div class="grid-container">
         <div class="article-container grid-block">
