fix header and pagination

--- a/app/templates/posts.hbs
+++ b/app/templates/posts.hbs
@@ -7,13 +7,13 @@
                     <a href="http://sandbox2.fandom.wikia.com/articles">All</a>
                 </li>
                 <li>
-                    <a href="http://sandbox2.fandom.wikia.com/articles?channel=games">Games</a>
+                    <a href="http://sandbox2.fandom.wikia.com/articles?channel=games">Games (N/A)</a>
                 </li>
                 <li>
-                    <a href="http://sandbox2.fandom.wikia.com/articles?channel=movies">Movies</a>
+                    <a href="http://sandbox2.fandom.wikia.com/articles?channel=movies">Movies (N/A)</a>
                 </li>
                 <li>
-                    <a href="http://sandbox2.fandom.wikia.com/articles?channel=tv">TV</a>
+                    <a href="http://sandbox2.fandom.wikia.com/articles?channel=tv">TV (N/A)</a>
                 </li>
             </ul>
         </header>
@@ -26,15 +26,9 @@
             <div class="pagination">
                 <span class="previous inactive">&lt;</span>
 
-                <a href="http://sandbox2.fandom.wikia.com/articles/1" class="page active">1</a>
-                <a href="http://sandbox2.fandom.wikia.com/articles/2" class="page">2</a>
-                <a href="http://sandbox2.fandom.wikia.com/articles/3" class="page">3</a>
-                <a href="http://sandbox2.fandom.wikia.com/articles/4" class="page">4</a>
-                <a href="http://sandbox2.fandom.wikia.com/articles/5" class="page">5</a>
-                <span>…</span>
-                <a href="http://sandbox2.fandom.wikia.com/articles/61" class="page">61</a>
+                <a class="page active">N/A</a>
 
-                <a href="http://sandbox2.fandom.wikia.com/articles/2" class="page next">&gt;</a>
+                <span class="next inactive">&gt;</span>
             </div>
         </div>
     </div>
