--- a/app/templates/components/post-article.hbs
+++ b/app/templates/components/post-article.hbs
@@ -22,8 +22,9 @@
     </span>
 
     <span class="posted-on">
+        {{! TODO use model.date }}
         <time class="entry-date published updated" datetime="2016-06-08T04:18:14+00:00">
-            June 8, 2016
+            Hardcoded 8, 2016
         </time>
     </span>
 
@@ -33,14 +34,12 @@
                 <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#facebook-icon-default"></use>
             </svg>
             <span>Share</span></a>
-        <a class="tweet-btn" text=""
-           href="https://twitter.com/intent/tweet?text=&amp;url=http%3A%2F%2Fsandbox2.fandom.wikia.com%2Farticles%2Fa-second-glance-wrong-guy-1997&amp;hashtags=fandom&amp;via=getfandom">
+        <a class="tweet-btn">
             <svg class="icon twitter-icon-default">
                 <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#twitter-icon-default"></use>
             </svg>
             <span>Tweet</span></a>
-        <a class="reddit-btn" target="_blank"
-           href="//www.reddit.com/submit?url=http%3A%2F%2Fsandbox2.fandom.wikia.com%2Farticles%2Fa-second-glance-wrong-guy-1997">
+        <a class="reddit-btn">
             <svg class="icon reddit-icon-default">
                 <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#reddit-icon-default"></use>
             </svg>
@@ -54,19 +53,17 @@
     <hr>
     <div class="text">People are sharing and discussing this article – join them!</div>
     <div class="share-wrapper">
-        <a class="fb-share-btn" data-is="trackable" riot-tag="trackable">
+        <a class="fb-share-btn">
             <svg class="icon facebook-icon-default">
                 <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#facebook-icon-default"></use>
             </svg>
             <span>Share</span></a>
-        <a class="tweet-btn" text="" data-is="trackable" riot-tag="trackable"
-           href="https://twitter.com/intent/tweet?text=&amp;url=http%3A%2F%2Fsandbox2.fandom.wikia.com%2Farticles%2Fa-second-glance-wrong-guy-1997&amp;hashtags=fandom&amp;via=getfandom">
+        <a class="tweet-btn">
             <svg class="icon twitter-icon-default">
                 <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#twitter-icon-default"></use>
             </svg>
             <span>Tweet</span></a>
-        <a class="reddit-btn" target="_blank" data-is="trackable" riot-tag="trackable"
-           href="//www.reddit.com/submit?url=http%3A%2F%2Fsandbox2.fandom.wikia.com%2Farticles%2Fa-second-glance-wrong-guy-1997">
+        <a class="reddit-btn">
             <svg class="icon reddit-icon-default">
                 <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#reddit-icon-default"></use>
             </svg>
