--- a/app/templates/posts.hbs
+++ b/app/templates/posts.hbs
@@ -4,16 +4,16 @@
             <h1>All Top Stories</h1>
             <ul class="channels clearfix">
                 <li class="active">
-                    <a href="http://sandbox2.fandom.wikia.com/articles">All</a>
+                    <a>All</a>
                 </li>
                 <li>
-                    <a href="http://sandbox2.fandom.wikia.com/articles?channel=games">Games (N/A)</a>
+                    <a>Games (N/A)</a>
                 </li>
                 <li>
-                    <a href="http://sandbox2.fandom.wikia.com/articles?channel=movies">Movies (N/A)</a>
+                    <a>Movies (N/A)</a>
                 </li>
                 <li>
-                    <a href="http://sandbox2.fandom.wikia.com/articles?channel=tv">TV (N/A)</a>
+                    <a>TV (N/A)</a>
                 </li>
             </ul>
         </header>
