move classes as a quick fix for fastboot

--- a/app/templates/posts.hbs
+++ b/app/templates/posts.hbs
@@ -1,4 +1,4 @@
-<section class="all-stories grid-container grid-block main-wrap ">
+<section class="page page-articles posts all-stories grid-container grid-block main-wrap ">
     <div class="grid-block wrap list">
         <header class="grid-content">
             <h1>All Top Stories</h1>
