--- a/app/templates/components/global-nav.hbs
+++ b/app/templates/components/global-nav.hbs
@@ -7,11 +7,11 @@
             <span></span>
         </div>
 
-        {{#link-to 'index' class='wordmark wordmark-fandom-logo-link-desktop'}}
+        {{#link-to 'posts' class='wordmark wordmark-fandom-logo-link-desktop'}}
             <img class="logo-fandom-tagline"
                  src="http://sandbox2.fandom.wikia.com/wp-content/themes/upstream/dist/svg/logo-fandom-tagline.svg">
         {{/link-to}}
-        {{#link-to 'index' class='wordmark'}}
+        {{#link-to 'posts' class='wordmark'}}
             <img class="logo-fandom"
                  src="http://sandbox2.fandom.wikia.com/wp-content/themes/upstream/dist/svg/logo-fandom.svg">
         {{/link-to}}
