Use production API

--- a/app/templates/components/global-nav.hbs
+++ b/app/templates/components/global-nav.hbs
@@ -9,17 +9,17 @@
 
         {{#link-to 'posts' class='wordmark wordmark-fandom-logo-link-desktop'}}
             <img class="logo-fandom-tagline"
-                 src="http://sandbox2.fandom.wikia.com/wp-content/themes/upstream/dist/svg/logo-fandom-tagline.svg">
+                 src="http://fandom.wikia.com/wp-content/themes/upstream/dist/svg/logo-fandom-tagline.svg">
         {{/link-to}}
         {{#link-to 'posts' class='wordmark'}}
             <img class="logo-fandom"
-                 src="http://sandbox2.fandom.wikia.com/wp-content/themes/upstream/dist/svg/logo-fandom.svg">
+                 src="http://fandom.wikia.com/wp-content/themes/upstream/dist/svg/logo-fandom.svg">
         {{/link-to}}
         <ul class="nav-links sub-nav hide-for-mobile">
             <li class="user-state-mobile clearfix">
                 <div class="unauthenticated">
                     <img class="icon-sign-in-gray"
-                         src="http://sandbox2.fandom.wikia.com/wp-content/themes/upstream/dist/svg/icon-sign-in-white.svg">
+                         src="http://fandom.wikia.com/wp-content/themes/upstream/dist/svg/icon-sign-in-white.svg">
                     HARDCODED :(
                 </div>
             </li>
@@ -67,7 +67,7 @@
         <div class="user-state hide-for-mobile">
             <div class="unauthenticated">
                 <img class="icon-sign-in-gray"
-                     src="http://sandbox2.fandom.wikia.com/wp-content/themes/upstream/dist/svg/icon-sign-in-gray.svg">
+                     src="http://fandom.wikia.com/wp-content/themes/upstream/dist/svg/icon-sign-in-gray.svg">
                 <a href="http://www.wikia.com/signin">HARDCODED :(</a>
             </div>
         </div>
