--- a/app/templates/components/post-right-rail.hbs
+++ b/app/templates/components/post-right-rail.hbs
@@ -1,7 +1,7 @@
 <aside class="side-rail article-rail hide-for-medium show-for-large visible" style="margin-top: 169px;">
     <div class="social-promo-rail">
         <div class="logo">
-            <img src="http://sandbox2.fandom.wikia.com/wp-content/themes/upstream/dist/svg/icon-fandom.svg">
+            <img src="http://fandom.wikia.com/wp-content/themes/upstream/dist/svg/icon-fandom.svg">
         </div>
         <span class="callout">
             Don't miss a thing.<br>
@@ -33,17 +33,17 @@
                      tracking-label="more-from-e3-2016.item-0" data-is="trackable" riot-tag="trackable">
                     <div class="grid-content thumbnail ">
                         <a class="post-thumbnail"
-                           href="http://sandbox2.fandom.wikia.com/articles/new-trailer-teases-watch-dogs-2"
+                           href="http://fandom.wikia.com/articles/new-trailer-teases-watch-dogs-2"
                            data-is="trackable" riot-tag="trackable"><img width="387" height="225"
-                                                                         src="http://sandbox2.fandom.wikia.com/wp-content/uploads/2016/06/Watch-Dogs-Logo-387x225.jpg"
+                                                                         src="http://fandom.wikia.com/wp-content/uploads/2016/06/Watch-Dogs-Logo-387x225.jpg"
                                                                          class="attachment-thumbnail size-thumbnail wp-post-image"
                                                                          alt="Strange New Teaser Appears for ‘Watch Dogs 2’"
-                                                                         srcset="http://sandbox2.fandom.wikia.com/wp-content/uploads/2016/06/Watch-Dogs-Logo-387x225.jpg 387w, http://sandbox2.fandom.wikia.com/wp-content/uploads/2016/06/Watch-Dogs-Logo.jpg 1093w"
+                                                                         srcset="http://fandom.wikia.com/wp-content/uploads/2016/06/Watch-Dogs-Logo-387x225.jpg 387w, http://fandom.wikia.com/wp-content/uploads/2016/06/Watch-Dogs-Logo.jpg 1093w"
                                                                          sizes="(max-width: 387px) 100vw, 387px"></a>
                         <span class="category cat-games">Games</span></div>
                     <div class="grid-content details">
                         <h3 class="entry-title">
-                            <a href="http://sandbox2.fandom.wikia.com/articles/new-trailer-teases-watch-dogs-2"
+                            <a href="http://fandom.wikia.com/articles/new-trailer-teases-watch-dogs-2"
                                rel="bookmark" data-is="trackable" riot-tag="trackable">Strange New Teaser Appears for
                                 'Watch Dogs 2'</a>
                         </h3>
@@ -55,18 +55,18 @@
                      tracking-label="more-from-e3-2016.item-1" data-is="trackable" riot-tag="trackable">
                     <div class="grid-content thumbnail ">
                         <a class="post-thumbnail"
-                           href="http://sandbox2.fandom.wikia.com/articles/e3-2016-predictions-preview-take-two-2k"
+                           href="http://fandom.wikia.com/articles/e3-2016-predictions-preview-take-two-2k"
                            data-is="trackable" riot-tag="trackable"><img width="400" height="225"
-                                                                         src="http://sandbox2.fandom.wikia.com/wp-content/uploads/2016/04/Red-Dead-Redemption_Hero_Wanted-update-400x225.jpg"
+                                                                         src="http://fandom.wikia.com/wp-content/uploads/2016/04/Red-Dead-Redemption_Hero_Wanted-update-400x225.jpg"
                                                                          class="attachment-thumbnail size-thumbnail wp-post-image"
                                                                          alt="E3 2016 Predictions and Preview: Take-Two / 2K"
-                                                                         srcset="http://sandbox2.fandom.wikia.com/wp-content/uploads/2016/04/Red-Dead-Redemption_Hero_Wanted-update-400x225.jpg 400w, http://sandbox2.fandom.wikia.com/wp-content/uploads/2016/04/Red-Dead-Redemption_Hero_Wanted-update-768x432.jpg 768w, http://sandbox2.fandom.wikia.com/wp-content/uploads/2016/04/Red-Dead-Redemption_Hero_Wanted-update.jpg 1280w"
+                                                                         srcset="http://fandom.wikia.com/wp-content/uploads/2016/04/Red-Dead-Redemption_Hero_Wanted-update-400x225.jpg 400w, http://fandom.wikia.com/wp-content/uploads/2016/04/Red-Dead-Redemption_Hero_Wanted-update-768x432.jpg 768w, http://fandom.wikia.com/wp-content/uploads/2016/04/Red-Dead-Redemption_Hero_Wanted-update.jpg 1280w"
                                                                          sizes="(max-width: 400px) 100vw, 400px"
                                                                          title="" style=""></a>
                         <span class="category cat-games">Games</span></div>
                     <div class="grid-content details">
                         <h3 class="entry-title">
-                            <a href="http://sandbox2.fandom.wikia.com/articles/e3-2016-predictions-preview-take-two-2k"
+                            <a href="http://fandom.wikia.com/articles/e3-2016-predictions-preview-take-two-2k"
                                rel="bookmark" data-is="trackable" riot-tag="trackable">E3 2016 Predictions and Preview:
                                 Take-Two / 2K</a>
                         </h3>
@@ -78,17 +78,17 @@
                      tracking-label="more-from-e3-2016.item-2" data-is="trackable" riot-tag="trackable">
                     <div class="grid-content thumbnail ">
                         <a class="post-thumbnail"
-                           href="http://sandbox2.fandom.wikia.com/articles/e3-2016-preview-ubisoft" data-is="trackable"
+                           href="http://fandom.wikia.com/articles/e3-2016-preview-ubisoft" data-is="trackable"
                            riot-tag="trackable"><img width="400" height="225"
-                                                     src="http://sandbox2.fandom.wikia.com/wp-content/uploads/2016/06/Ubisoft-E3-e1465205069185-400x225.jpg"
+                                                     src="http://fandom.wikia.com/wp-content/uploads/2016/06/Ubisoft-E3-e1465205069185-400x225.jpg"
                                                      class="attachment-thumbnail size-thumbnail wp-post-image"
                                                      alt="E3 2016: Ubisoft Predictions and Preview"
-                                                     srcset="http://sandbox2.fandom.wikia.com/wp-content/uploads/2016/06/Ubisoft-E3-e1465205069185-400x225.jpg 400w, http://sandbox2.fandom.wikia.com/wp-content/uploads/2016/06/Ubisoft-E3-e1465205069185-1440x809.jpg 1440w"
+                                                     srcset="http://fandom.wikia.com/wp-content/uploads/2016/06/Ubisoft-E3-e1465205069185-400x225.jpg 400w, http://fandom.wikia.com/wp-content/uploads/2016/06/Ubisoft-E3-e1465205069185-1440x809.jpg 1440w"
                                                      sizes="(max-width: 400px) 100vw, 400px" title="" style=""></a>
                         <span class="category cat-games">Games</span></div>
                     <div class="grid-content details">
                         <h3 class="entry-title">
-                            <a href="http://sandbox2.fandom.wikia.com/articles/e3-2016-preview-ubisoft" rel="bookmark"
+                            <a href="http://fandom.wikia.com/articles/e3-2016-preview-ubisoft" rel="bookmark"
                                data-is="trackable" riot-tag="trackable">E3 2016: Ubisoft Predictions and Preview</a>
                         </h3>
 					<span class="attribution">
@@ -99,18 +99,18 @@
                      tracking-label="more-from-e3-2016.item-3" data-is="trackable" riot-tag="trackable">
                     <div class="grid-content thumbnail ">
                         <a class="post-thumbnail"
-                           href="http://sandbox2.fandom.wikia.com/articles/e3-2016-predictions-preview-nintendo"
+                           href="http://fandom.wikia.com/articles/e3-2016-predictions-preview-nintendo"
                            data-is="trackable" riot-tag="trackable"><img width="377" height="225"
-                                                                         src="http://sandbox2.fandom.wikia.com/wp-content/uploads/2016/01/nintendo1-e1461797761923-377x225.jpg"
+                                                                         src="http://fandom.wikia.com/wp-content/uploads/2016/01/nintendo1-e1461797761923-377x225.jpg"
                                                                          class="attachment-thumbnail size-thumbnail wp-post-image"
                                                                          alt="E3 2016 Predictions and Preview: Nintendo"
-                                                                         srcset="http://sandbox2.fandom.wikia.com/wp-content/uploads/2016/01/nintendo1-e1461797761923-377x225.jpg 377w, http://sandbox2.fandom.wikia.com/wp-content/uploads/2016/01/nintendo1-e1461797761923-768x458.jpg 768w, http://sandbox2.fandom.wikia.com/wp-content/uploads/2016/01/nintendo1-e1461797761923.jpg 1024w"
+                                                                         srcset="http://fandom.wikia.com/wp-content/uploads/2016/01/nintendo1-e1461797761923-377x225.jpg 377w, http://fandom.wikia.com/wp-content/uploads/2016/01/nintendo1-e1461797761923-768x458.jpg 768w, http://fandom.wikia.com/wp-content/uploads/2016/01/nintendo1-e1461797761923.jpg 1024w"
                                                                          sizes="(max-width: 377px) 100vw, 377px"
                                                                          title="" style=""></a>
                         <span class="category cat-games">Games</span></div>
                     <div class="grid-content details">
                         <h3 class="entry-title">
-                            <a href="http://sandbox2.fandom.wikia.com/articles/e3-2016-predictions-preview-nintendo"
+                            <a href="http://fandom.wikia.com/articles/e3-2016-predictions-preview-nintendo"
                                rel="bookmark" data-is="trackable" riot-tag="trackable">E3 2016 Predictions and Preview:
                                 Nintendo</a>
                         </h3>
@@ -122,17 +122,17 @@
                      tracking-label="more-from-e3-2016.item-4" data-is="trackable" riot-tag="trackable">
                     <div class="grid-content thumbnail ">
                         <a class="post-thumbnail"
-                           href="http://sandbox2.fandom.wikia.com/articles/e3-2016-microsoft-predictions-preview"
+                           href="http://fandom.wikia.com/articles/e3-2016-microsoft-predictions-preview"
                            data-is="trackable" riot-tag="trackable"><img width="400" height="225"
-                                                                         src="http://sandbox2.fandom.wikia.com/wp-content/uploads/2016/06/Microsoft-E3-400x225.jpg"
+                                                                         src="http://fandom.wikia.com/wp-content/uploads/2016/06/Microsoft-E3-400x225.jpg"
                                                                          class="attachment-thumbnail size-thumbnail wp-post-image"
                                                                          alt="E3 2016: Microsoft Predictions and Preview"
-                                                                         srcset="http://sandbox2.fandom.wikia.com/wp-content/uploads/2016/06/Microsoft-E3-400x225.jpg 400w, http://sandbox2.fandom.wikia.com/wp-content/uploads/2016/06/Microsoft-E3-1440x809.jpg 1440w"
+                                                                         srcset="http://fandom.wikia.com/wp-content/uploads/2016/06/Microsoft-E3-400x225.jpg 400w, http://fandom.wikia.com/wp-content/uploads/2016/06/Microsoft-E3-1440x809.jpg 1440w"
                                                                          sizes="(max-width: 400px) 100vw, 400px"></a>
                         <span class="category cat-games">Games</span></div>
                     <div class="grid-content details">
                         <h3 class="entry-title">
-                            <a href="http://sandbox2.fandom.wikia.com/articles/e3-2016-microsoft-predictions-preview"
+                            <a href="http://fandom.wikia.com/articles/e3-2016-microsoft-predictions-preview"
                                rel="bookmark" data-is="trackable" riot-tag="trackable">E3 2016: Microsoft Predictions
                                 and Preview</a>
                         </h3>
@@ -146,10 +146,10 @@
                         <a class="post-thumbnail"
                            href="https://www.destructoid.com/devolver-digital-hints-at-serious-sam-4-or-talos-principle-2-at-e3-365633.phtml"
                            target="_blank" data-is="trackable" riot-tag="trackable"><img width="400" height="225"
-                                                                                         src="http://sandbox2.fandom.wikia.com/wp-content/uploads/2015/12/TheTalosPrincipleDeluxeEdition01-400x225.png"
+                                                                                         src="http://fandom.wikia.com/wp-content/uploads/2015/12/TheTalosPrincipleDeluxeEdition01-400x225.png"
                                                                                          class="attachment-thumbnail size-thumbnail wp-post-image"
                                                                                          alt="Devolver Digital Hints at ‘Serious Sam 4’ or ‘Talos Principle 2’ at E3"
-                                                                                         srcset="http://sandbox2.fandom.wikia.com/wp-content/uploads/2015/12/TheTalosPrincipleDeluxeEdition01-400x225.png 400w, http://sandbox2.fandom.wikia.com/wp-content/uploads/2015/12/TheTalosPrincipleDeluxeEdition01-1440x810.png 1440w"
+                                                                                         srcset="http://fandom.wikia.com/wp-content/uploads/2015/12/TheTalosPrincipleDeluxeEdition01-400x225.png 400w, http://fandom.wikia.com/wp-content/uploads/2015/12/TheTalosPrincipleDeluxeEdition01-1440x810.png 1440w"
                                                                                          sizes="(max-width: 400px) 100vw, 400px"></a>
                         <span class="category cat-games">Games</span></div>
                     <div class="grid-content details">
@@ -166,17 +166,17 @@
                      tracking-label="more-from-e3-2016.item-6" data-is="trackable" riot-tag="trackable">
                     <div class="grid-content thumbnail ">
                         <a class="post-thumbnail"
-                           href="http://sandbox2.fandom.wikia.com/articles/e3-2016-predictions-sony" data-is="trackable"
+                           href="http://fandom.wikia.com/articles/e3-2016-predictions-sony" data-is="trackable"
                            riot-tag="trackable"><img width="400" height="225"
-                                                     src="http://sandbox2.fandom.wikia.com/wp-content/uploads/2016/05/Z-3-400x225.png"
+                                                     src="http://fandom.wikia.com/wp-content/uploads/2016/05/Z-3-400x225.png"
                                                      class="attachment-thumbnail size-thumbnail wp-post-image"
                                                      alt="E3 2016 Predictions: Sony"
-                                                     srcset="http://sandbox2.fandom.wikia.com/wp-content/uploads/2016/05/Z-3-400x225.png 400w, http://sandbox2.fandom.wikia.com/wp-content/uploads/2016/05/Z-3-1440x810.png 1440w"
+                                                     srcset="http://fandom.wikia.com/wp-content/uploads/2016/05/Z-3-400x225.png 400w, http://fandom.wikia.com/wp-content/uploads/2016/05/Z-3-1440x810.png 1440w"
                                                      sizes="(max-width: 400px) 100vw, 400px"></a>
                         <span class="category cat-games">Games</span></div>
                     <div class="grid-content details">
                         <h3 class="entry-title">
-                            <a href="http://sandbox2.fandom.wikia.com/articles/e3-2016-predictions-sony" rel="bookmark"
+                            <a href="http://fandom.wikia.com/articles/e3-2016-predictions-sony" rel="bookmark"
                                data-is="trackable" riot-tag="trackable">E3 2016 Predictions: Sony</a>
                         </h3>
 					<span class="attribution">
@@ -193,7 +193,7 @@
 	</span>
         <hr>
         <h3>Become a Fandom Contributor!</h3>
-        <a href="http://sandbox2.fandom.wikia.com/fan-contributor" class="learn-more" data-is="trackable"
+        <a href="http://fandom.wikia.com/fan-contributor" class="learn-more" data-is="trackable"
            riot-tag="trackable">Learn More</a>
     </div>
 </aside>
